bugs fix, and optimization

--- a/FolderTask/Tasks.json
+++ b/FolderTask/Tasks.json
@@ -1,1 +1,7 @@
-[ ]
+[ {
+  "id" : 1,
+  "description" : "not found",
+  "status" : "IN_PROGRESS",
+  "creatAt" : "2025:10:01 - 12:06:10",
+  "updateAt" : "2025:10:01 - 12:06:10"
+} ]
